# prozchain

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  install.sh  setup-project.sh
config/: default.toml  log4rs.yaml
docs/: 00-0-documentation-index.md  01-architecture_overview.md  02-0-network-layer-index.md  02.01-network-layer-overview.md  02.02-network-layer-p2p-architecture.md  02.03-network-layer-peer-discovery.md  02.04-network-layer-connection-management.md  02.05-network-layer-message-protocols.md  02.06-network-layer-message-propagation.md  02.07-network-layer-security.md  02.08-network-layer-monitoring.md  02.09-network-layer-references.md  03-0-storage-layer-index.md  03.01-storage-layer-overview.md  03.02-storage-layer-architecture.md  03.03-storage-layer-block-storage.md  03.04-storage-layer-state-database.md  03.05-storage-layer-transaction-storage.md  03.06-storage-layer-pruning.md  03.07-storage-layer-data-integrity.md  03.08-storage-layer-performance.md  03.09-storage-layer-references.md  04-0-state-layer-index.md  04.01-state-layer-overview.md  04.02-state-layer-architecture.md  04.03-state-layer-transitions.md  04.04-state-layer-accounts.md  04.05-state-layer-execution.md  04.06-state-layer-contracts.md  04.07-state-layer-synchronization.md  04.08-state-layer-verification.md  04.09-state-layer-references.md  05-0-consensus-layer-index.md  05-consensus_layer.md  05.01-consensus-layer-overview.md  05.02-consensus-layer-mechanism.md  05.03-consensus-layer-validators.md  05.04-consensus-layer-block-production.md  05.05-consensus-layer-finality.md  05.06-consensus-layer-fork-choice.md  (+171 more)
src/: lib.rs  main.rs  types.rs
src/network/: __metrics.rs  block_propagation.rs  connection.rs  discovery.rs  interfaces.rs  message.rs  mod.rs  nat.rs  node.rs  propagation.rs  protocol_version.rs  security.rs  service.rs  tests.rs  topology.rs  utils.rs
src/network/metrics/: mod.rs
src/types/: __mod.rs  error.rs  mod.rs  network.rs
